Updated Survey page, made map more dynamic and fixed spacing on title.

--- a/apps/hosp_comparison_app/static/hosp_comparison_app/css/stylesheet.css
+++ b/apps/hosp_comparison_app/static/hosp_comparison_app/css/stylesheet.css
@@ -138,6 +138,11 @@ body {
                     font-style: italic;
                 }
 
+                .js-plotly-plot,
+                .plot-container {
+                    height: 90%
+                }
+
             #hospital_map {
                 margin: 0% 5% 0% 5%;
                 width: 90%;
